provarAnt/00D190000000ZY2EAM/objects/SalesIQ__BUAU__c.object
<CustomObject>
    <description>Bussiness As usual admin settings</description>
    <fields>
        <fullName>SalesIQ__Date_New__c</fullName>
        <formula>DATE(SalesIQ__Year__c, SalesIQ__Month__c, SalesIQ__date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date_New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Month__c</fullName>
        <label>Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Monthstring__c</fullName>
        <formula>CASE( SalesIQ__Month__c , 1, &quot;Jan&quot;, 2, &quot;Feb&quot;,3, &quot;Mar&quot; ,4,&quot;Apr&quot;,5,&quot;May&quot;,6,&quot;Jun&quot;,7,&quot;Jul&quot;,8,&quot;Aug&quot;,9,&quot;Sep&quot;,10,&quot;Oct&quot;,11,&quot;Nov&quot;,12,&quot;Dec&quot;,&quot;Dec&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthstring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Year__c</fullName>
        <label>Year</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__date__c</fullName>
        <label>date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__fulldate__c</fullName>
        <formula>Text(SalesIQ__date__c )&amp;&apos;/&apos;&amp; Text( SalesIQ__Month__c )&amp; &apos;/&apos;&amp; Text(SalesIQ__Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fulldate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__quarter__c</fullName>
        <formula>IF( OR( SalesIQ__Month__c ==1, SalesIQ__Month__c ==2, SalesIQ__Month__c ==3) , 1, if(OR( SalesIQ__Month__c ==4, SalesIQ__Month__c ==5, SalesIQ__Month__c ==6),2,if(OR( SalesIQ__Month__c ==7, SalesIQ__Month__c ==8, SalesIQ__Month__c ==9),3,if(OR( SalesIQ__Month__c ==10, SalesIQ__Month__c ==11, SalesIQ__Month__c ==12),4,4))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BUAU</label>
    <nameField>
        <label>BAU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BUAUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>